--- a/src/main/webapp/HomePage.html
+++ b/src/main/webapp/HomePage.html
@@ -7,6 +7,6 @@
 <body>
 <p>Hello Yose</p>
 <br />
-<a id="repository-link" href="https://github.com/trazeris/yose-molecule-example">open on github</a>
+<a id="repository-link" href="https://github.com/trazeris/yose-molecule-example">Voir le code source</a>
 </body>
 </html>
